--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,18 @@
 [tool.poetry]
-name = "example"
+name = "py-template"
 version = "0.1.0"
-description = "Amazing example text for the project of yours"
+description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+requests = "^2.28.0"
+loguru = "^0.6.0"
+isort = "^5.10.1"
+black = "^22.3.0"
+pathlib = "^1.0.1"
+python-decouple = "^3.6"
+flake8 = "^4.0.1"
 
 [tool.poetry.dev-dependencies]
 
